src/objects/Patient_Referral__c.object
<CustomObject>
    <description>This object will store the Patient Referrals beign managed.</description>
    <fields>
        <fullName>Amino_Notes__c</fullName>
        <label>Amino Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amino__c</fullName>
        <label>Amino</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Smart Match</fullName>
                </value>
                <value>
                    <fullName>Non-Smart Match</fullName>
                </value>
                <value>
                    <fullName>Provider not found</fullName>
                </value>
                <value>
                    <fullName>Amino Provider</fullName>
                    <isActive>false</isActive>
                    <label>Amino Provider</label>
                </value>
                <value>
                    <fullName>Other Provider</fullName>
                    <isActive>false</isActive>
                    <label>Other Provider</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Date_Entered__c</fullName>
        <description>Day that the appointment date field was entered.</description>
        <label>Appointment Date Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <description>Date the appointment was completed for the Patient Referral. Requested by Sarah L for Patient Referral Management project.</description>
        <inlineHelpText>Select the date the appointment was completed for this Patient Referral.</inlineHelpText>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approx_Cost_of_Appointment__c</fullName>
        <inlineHelpText>What is the approximate cost for this appointment?</inlineHelpText>
        <label>Approx. Cost of Appointment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_URL__c</fullName>
        <label>Case URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Castlight_Notes__c</fullName>
        <label>Castlight Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Castlight__c</fullName>
        <label>Castlight</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Best Match</fullName>
                </value>
                <value>
                    <fullName>Clinical Ratings</fullName>
                </value>
                <value>
                    <fullName>Distance</fullName>
                </value>
                <value>
                    <fullName>Highest Rated</fullName>
                </value>
                <value>
                    <fullName>Least Expensive</fullName>
                </value>
                <value>
                    <fullName>Most Reviews</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinic__c</fullName>
        <label>Clinic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clinics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Date/time the status was changed to &quot;Closed&quot;</description>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Community_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complicated_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complicated Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complication_Reason__c</fullName>
        <label>Complication Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completing extra Forms</fullName>
                </value>
                <value>
                    <fullName>Difficult Insurance</fullName>
                </value>
                <value>
                    <fullName>Find specialist with second language</fullName>
                </value>
                <value>
                    <fullName>Incorrect Referral Placed</fullName>
                </value>
                <value>
                    <fullName>Interpreter services needed</fullName>
                </value>
                <value>
                    <fullName>Provider Request for additional research or help</fullName>
                </value>
                <value>
                    <fullName>Reroute</fullName>
                </value>
                <value>
                    <fullName>Research for low cost options</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Until_Patient_Seen__c</fullName>
        <description>Used for reporting to determine the number of days between referral and patient being seen.</description>
        <formula>((Appointment_Date__c) - (DATEVALUE( CreatedDate ))) -

(CASE(
MOD(Appointment_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),1,0,2,0,3,0,4,0,5,1,6,2,0),
1 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),0,0,1,0,2,0,3,0,4,0,5,2,2),
2 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),0,0,1,0,2,0,3,1,2),
3 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),0,0,1,0,2,1,2),
4 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),0,0,1,1,2),
5 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),0,1,2),
6 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),6,2,1),
999)
+
(FLOOR((Appointment_Date__c) - (DATEVALUE(CreatedDate)))/7)*2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Until Patient Seen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declined_Castlight_Reason__c</fullName>
        <label>Declined Castlight Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Castlight__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Contact Data Incorrect</fullName>
                </value>
                <value>
                    <fullName>Established relationship</fullName>
                </value>
                <value>
                    <fullName>Location/Distance</fullName>
                </value>
                <value>
                    <fullName>Non-Amazon Benefits</fullName>
                </value>
                <value>
                    <fullName>Patient preference</fullName>
                </value>
                <value>
                    <fullName>Pilot Ended</fullName>
                </value>
                <value>
                    <fullName>Poor Patient Reviews</fullName>
                </value>
                <value>
                    <fullName>Provider has incorrect contact info</fullName>
                </value>
                <value>
                    <fullName>Provider preference</fullName>
                </value>
                <value>
                    <fullName>Specialty Services Incorrect</fullName>
                </value>
                <value>
                    <fullName>Specialty too broad</fullName>
                </value>
                <value>
                    <fullName>Uninsured</fullName>
                </value>
                <value>
                    <fullName>Amino Recommendation</fullName>
                    <isActive>false</isActive>
                    <label>Amino Recommendation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Diagnosis entered by the Crossover team member. Requested by Sarah L for Patient Referral Management project.</description>
        <inlineHelpText>Enter the diagnosis for this Patient Referral.</inlineHelpText>
        <label>Diagnosis</label>
        <referenceTo>Diagnosis_Code__c</referenceTo>
        <relationshipLabel>Patient Referrals</relationshipLabel>
        <relationshipName>Patient_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMR__c</fullName>
        <description>Displays the value of the Patient__r.EMR__c field on the selected Patient Contact record. Requested by Sarah L for Patient Referral Management project.</description>
        <formula>Patient__r.EMR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Benefits_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Benefits Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_or_Institution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Group for the Patient Referral. Requested by Sarah L for Patient Referral Management project.</description>
        <inlineHelpText>Group referred for this Patient Referral.</inlineHelpText>
        <label>Group</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Group_or_Institution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_network__c</fullName>
        <defaultValue>true</defaultValue>
        <label>In-network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Closed__c</fullName>
        <description>Signifies that the Patient Referral is in a &apos;Closed&apos; Status.</description>
        <formula>NOT(ISPICKVAL(Status__c, &apos;Open&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Ratings_Average__c</fullName>
        <inlineHelpText>Online ratings average on a scale of 1 to 5 stars.</inlineHelpText>
        <label>Online Ratings Average</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Patient Contact associated with the Patient Referral. Requested by Sarah L for Patient Referral Management project.</description>
        <inlineHelpText>Select the Patient Contact associated with this Patient Referral.</inlineHelpText>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patient Referrals</relationshipLabel>
        <relationshipName>Patient_Referrals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Payment_Type__c</fullName>
        <label>Preferred Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amazon health plan</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>MSFT HCP inside EHN</fullName>
                </value>
                <value>
                    <fullName>MSFT HCP outside EHN</fullName>
                </value>
                <value>
                    <fullName>MSFT HCP outside EHN and outside HCP</fullName>
                </value>
                <value>
                    <fullName>MSFT Kaiser</fullName>
                </value>
                <value>
                    <fullName>MSFT Premera HSP</fullName>
                </value>
                <value>
                    <fullName>Non-Amazon health plan</fullName>
                </value>
                <value>
                    <fullName>Opting out of Amazon health plan (self-pay)</fullName>
                </value>
                <value>
                    <fullName>High deductible - Opt out of Amazon benefits</fullName>
                    <isActive>false</isActive>
                    <label>High deductible - Opt out of Amazon benefits</label>
                </value>
                <value>
                    <fullName>Non-Amazon benefits</fullName>
                    <isActive>false</isActive>
                    <label>Non-Amazon benefits</label>
                </value>
                <value>
                    <fullName>Self-pay</fullName>
                    <isActive>false</isActive>
                    <label>Self-pay</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Specified__c</fullName>
        <description>Signifies that the patient requested a specific Provider. Requested by Sarah L for Patient Referral Management project.</description>
        <inlineHelpText>Select if the patient requested a specific Provider.</inlineHelpText>
        <label>Provider Specified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Patient Specified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pt_Declined_Reason__c</fullName>
        <label>Declined Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pt_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Declined Amino</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Received__c</fullName>
        <description>Date the consultation report was obtained for the Patient Referral. Requested by Sarah L for Patient Referral Management project.</description>
        <inlineHelpText>Select the date the consultation report was obtained for this Patient Referral.</inlineHelpText>
        <label>Report Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date the Patient Referral was created. Requested by Sarah L for Patient Referral Management project.</description>
        <inlineHelpText>The date this Patient Referral was created.</inlineHelpText>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_by_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled by CN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialist_NPI__c</fullName>
        <formula>Specialist__r.NPI__c</formula>
        <inlineHelpText>The specialist&apos;s NPI number is pulled from the specialist record.</inlineHelpText>
        <label>Specialist NPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialist_Survey_Sent__c</fullName>
        <description>Date the survey was sent to the Patient selected for the Patient Referral. Requested by Sarah L for Patient Referral Management project.</description>
        <inlineHelpText>Select the date the survey was sent for this Patient Referral.</inlineHelpText>
        <label>Specialist Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specialist__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Specialist referred for the Patient Referral. Requested by Sarah L for Patient Referral Management project.</description>
        <inlineHelpText>Select the Specialist referred for this Patient Referral.</inlineHelpText>
        <label>Specialist</label>
        <referenceTo>Specialist__c</referenceTo>
        <relationshipLabel>Patient Referrals</relationshipLabel>
        <relationshipName>Patient_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Specialty_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Detail_Open_Kanban__c</fullName>
        <label>Status Detail Open Kanban</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Report Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Unscheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>No Report Received- No Survey Sent</fullName>
                </value>
                <value>
                    <fullName>No Report Received- Survey Sent</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Referral Options Provided</fullName>
                </value>
                <value>
                    <fullName>Ref Receipt - Established Care</fullName>
                </value>
                <value>
                    <fullName>Report Received - No Survey Sent</fullName>
                </value>
                <value>
                    <fullName>Report Received - Survey Sent</fullName>
                </value>
                <value>
                    <fullName>Report Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Unhappy - Reroute</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Unscheduled</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                    <isActive>false</isActive>
                    <label>Duplicate</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                    <isActive>false</isActive>
                    <label>Expired</label>
                </value>
                <value>
                    <fullName>Incorrect</fullName>
                    <isActive>false</isActive>
                    <label>Incorrect</label>
                </value>
                <value>
                    <fullName>No Notes</fullName>
                    <isActive>false</isActive>
                    <label>No Notes</label>
                </value>
                <value>
                    <fullName>Patient Declined</fullName>
                    <isActive>false</isActive>
                    <label>Patient Declined</label>
                </value>
                <value>
                    <fullName>Pending Additional Notes</fullName>
                    <isActive>false</isActive>
                    <label>Pending Additional Notes</label>
                </value>
                <value>
                    <fullName>Pending Location Preference</fullName>
                    <isActive>false</isActive>
                    <label>Pending Location Preference</label>
                </value>
                <value>
                    <fullName>Pending Provider Instruction</fullName>
                    <isActive>false</isActive>
                    <label>Pending Provider Instruction</label>
                </value>
                <value>
                    <fullName>Reroute</fullName>
                    <isActive>false</isActive>
                    <label>Reroute</label>
                </value>
                <value>
                    <fullName>Scheduled w/ Different Specialist</fullName>
                    <isActive>false</isActive>
                    <label>Scheduled w/ Different Specialist</label>
                </value>
                <value>
                    <fullName>Unresponvie</fullName>
                    <isActive>false</isActive>
                    <label>Unresponvie</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <color>#419249</color>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <color>#666666</color>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subspecialty__c</fullName>
        <label>Subspecialty</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Specialty__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Addiction Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Ankle and Foot</fullName>
                </value>
                <value>
                    <fullName>Arthroscopy</fullName>
                </value>
                <value>
                    <fullName>Barium Swallow</fullName>
                </value>
                <value>
                    <fullName>Battered Women&apos;s Shelters</fullName>
                </value>
                <value>
                    <fullName>Binocular Vision</fullName>
                </value>
                <value>
                    <fullName>Breast Biopsy</fullName>
                </value>
                <value>
                    <fullName>Breast Lump Fast Track</fullName>
                </value>
                <value>
                    <fullName>CAC</fullName>
                </value>
                <value>
                    <fullName>Cardiac Testing Fast Track</fullName>
                </value>
                <value>
                    <fullName>Cataract Surgery</fullName>
                </value>
                <value>
                    <fullName>Child/Elder Care</fullName>
                </value>
                <value>
                    <fullName>Chiropractic</fullName>
                </value>
                <value>
                    <fullName>Clothing</fullName>
                </value>
                <value>
                    <fullName>Colonoscopy</fullName>
                </value>
                <value>
                    <fullName>Colorguard at Home Kit</fullName>
                </value>
                <value>
                    <fullName>Community Resources</fullName>
                </value>
                <value>
                    <fullName>Cornea</fullName>
                </value>
                <value>
                    <fullName>Coronary Artery Calcium Score</fullName>
                </value>
                <value>
                    <fullName>Cosmetic</fullName>
                </value>
                <value>
                    <fullName>COVID-19/Disaster Relief</fullName>
                </value>
                <value>
                    <fullName>COVID-19 Vaccine</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>Dermatopathology</fullName>
                </value>
                <value>
                    <fullName>DEXA</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Diabetes Education</fullName>
                </value>
                <value>
                    <fullName>Echocardiogram</fullName>
                </value>
                <value>
                    <fullName>Elbow</fullName>
                </value>
                <value>
                    <fullName>Emergency Assistance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <description>Urgency for the Patient Referral. Requested by Sarah L for Patient Referral Management project.</description>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent (1-3)</fullName>
                </value>
                <value>
                    <fullName>Non-Urgent (7)</fullName>
                </value>
                <value>
                    <fullName>Non-Urgent (30)</fullName>
                </value>
                <value>
                    <fullName>Non-Urgent (90)</fullName>
                </value>
                <value>
                    <fullName>Non-Urgent (Other)</fullName>
                    <isActive>false</isActive>
                    <label>Non-Urgent (Other)</label>
                </value>
                <value>
                    <fullName>Same Day Urgent</fullName>
                    <isActive>false</isActive>
                    <label>Same Day Urgent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XO_Clinic__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>XO Clinic for the Patient Referral. Requested by Sarah L for Patient Referral Management project.</description>
        <inlineHelpText>Select the XO Clinic for this Patient Referral.</inlineHelpText>
        <label>XO Clinic</label>
        <referenceTo>Clinic__c</referenceTo>
        <relationshipLabel>Patient Referrals</relationshipLabel>
        <relationshipName>Patient_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XO_First__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XO First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XO_Internal_Rating__c</fullName>
        <label>XO Internal Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XO_Provider_Rating_Number__c</fullName>
        <formula>VALUE(TEXT(XO_Provider_Rating__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in reporting</inlineHelpText>
        <label>XO Provider Rating Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XO_Provider_Rating__c</fullName>
        <inlineHelpText>XO Provider Rating on a scale of 1 - 5 stars.</inlineHelpText>
        <label>XO Provider Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XO_Provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>XO Provider for the Patient Referral. Requested by Sarah L for Patient Referral Management project.</description>
        <inlineHelpText>Select the XO Provider for this Patient Referral.</inlineHelpText>
        <label>XO Provider</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipLabel>Patient Referrals</relationshipLabel>
        <relationshipName>Patient_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Days_to_Schedule_Appointment__c</fullName>
        <formula>((Appointment_Date_Entered__c ) - (DATEVALUE( CreatedDate ))) - 

(CASE(
      MOD(Appointment_Date_Entered__c - DATE(1985,6,24),7), 
0 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),1,0,2,0,3,0,4,0,5,1,6,2,0), 
1 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),0,0,1,0,2,0,3,0,4,0,5,2,2), 
2 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),0,0,1,0,2,0,3,1,2), 
3 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),0,0,1,0,2,1,2), 
4 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),0,0,1,1,2), 
5 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),0,1,2), 
6 , CASE( MOD( DATEVALUE(CreatedDate) - Appointment_Date_Entered__c, 7),6,2,1), 
999) 
+ 
(FLOOR((Appointment_Date_Entered__c) - (DATEVALUE(CreatedDate)))/7)*2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days to Schedule Appointment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Patient Referral</label>
    <listViews>
        <fullName>AMAT_Clinic_Patient_Referrals</fullName>
        <columns>NAME</columns>
        <columns>EMR__c</columns>
        <columns>Patient__c</columns>
        <columns>XO_Clinic__c</columns>
        <columns>XO_Provider__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Detail__c</columns>
        <columns>Request_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>XO_Clinic__c</field>
            <operation>contains</operation>
            <value>AMAT</value>
        </filters>
        <label>AMAT Clinic Patient Referrals</label>
        <sharedTo>
            <role>Care_Navigator</role>
            <role>Care_Navigator_Admin</role>
        </sharedTo>
    </listViews>
</CustomObject>